--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "flow-typed install",
+    "postupdate": "flow-typed install"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,8 @@
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-smells": "^1.0.1"
+    "eslint-plugin-smells": "^1.0.1",
+    "flow-bin": "^0.39.0",
+    "flow-typed": "^2.0.0"
   }
 }
